--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -24,8 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-    <script id="react-dotenv" src="./env.js"></script>
+    <title>React + ZOOOOOM</title>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://source.zoom.us/2.4.0/css/bootstrap.css"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://source.zoom.us/2.4.0/css/react-select.css"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
